# VBRust

./: .gitignore  Cargo.toml  README.md  VBR_spec_03_stdlib.md  dataframe_spec.md  gui_and_tui_guide.md  gui_spec.md  inline_rust_spec.md  language_reference.md  language_spec.md  projects_and_run_spec.md  refactor.md  stdlib_spec.md  testing_spec.md  tui_spec.md  web_spec.md
editors/vscode/: README.md  extension.js  language-configuration.json  package.json
examples/: array_access_error.vbr  arrays.vbr  await_fn.vbr  blocking_no_await_error.vbr  byref.vbr  byref_literal_error.vbr  canvas.vbr  case_guards.vbr  case_variable_error.vbr  closure_capture_error.vbr  closure_value_error.vbr  coercion.vbr  coercion_more.vbr  coercions.vbr  compound_assign.vbr  constants.vbr  conversions.vbr  converter.vbr  currency_error.vbr  database.vbr  dataframe_basics.vbr  dataframe_groupby.vbr  dataframe_join.vbr  date_error.vbr  datetime_basics.vbr  datetime_json.vbr  dice.vbr  doloop.vbr  dracula.vbr  enum_payloads.vbr  enums.vbr  fetch.vbr  field_inference.vbr  firstclass_types.vbr  format_error.vbr  functions.vbr  generic_error.vbr  global_error.vbr  greeting.vbr  grid_logic.vbr  (+104 more)
examples/counter_app/: main.vbr
examples/dataframe_basics_py/vbrpy/: __init__.py  filesystem.py  jsonval.py
examples/datetime_json_py/: main.py
examples/datetime_json_py/vbrpy/: __init__.py  datetimeval.py
examples/geometry_project/: main.vbr  shapes.vbr
examples/life_project/: life.vbr  main.vbr
examples/life_screen/: life.vbr  main.vbr
examples/mixed_project/: main.vbr  text.rs
old/: VBR_spec_01.md  VBR_spec_02.md  VBR_spec_03_stdlib.md
playground/: Cargo.toml  index.html
playground/src/: main.rs
projects/: vbr_gaps.md
projects/idea-engine/: README.md  config.json  main.vbr
src/: ast.rs  complete.rs  diagnostics.rs  gui.rs  lexer.rs  lib.rs  main.rs  parser.rs  python.rs  resolver.rs  span.rs  surface.rs  transpiler.rs  tui.rs  web.rs
tests/: compile_guard.rs  completion.rs  python.rs  snapshots.rs  spans.rs
tests/snapshots/: array_access_error.diag  arrays.rs  await_fn.diag  await_fn.rs  blocking_no_await_error.diag  byref.rs  byref_literal_error.diag  canvas.rs  case_guards.rs  case_variable_error.diag  closure_capture_error.diag  closure_value_error.diag  coercion.rs  coercion_more.rs  coercions.rs  compound_assign.rs  constants.py  constants.rs  conversions.rs  converter.diag  converter.rs  counter.rs  currency_error.diag  database.diag  database.out  database.py  database.rs  dataframe_basics.diag  dataframe_basics.py  dataframe_basics.rs  dataframe_groupby.py  dataframe_groupby.rs  dataframe_join.diag  dataframe_join.py  dataframe_join.rs  date_error.diag  datetime_basics.out  datetime_basics.py  datetime_basics.rs  datetime_json.diag  (+181 more)
vbr-ide/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
vbr-ide/scripts/: setup-linux.sh
vbr-ide/src/: designer.ts  examples.ts  main.ts  style.css  vbrLanguage.ts
vbr-ide/src-tauri/: Cargo.toml  tauri.conf.json
vbr-ide/src-tauri/icons/: icon.icns
vbr-ide/src-tauri/src/: main.rs
vbr-ide/vbr-ide-core/: Cargo.toml
vbr-ide/vbr-ide-core/src/: design.rs  lib.rs
vbr-lsp/: Cargo.toml
vbr-lsp/src/: main.rs
vbr_stdlib/: Cargo.toml
vbr_stdlib/src/: database.rs  dataframe.rs  datetime.rs  filesystem.rs  http.rs  json.rs  lib.rs  regex.rs  shell.rs
vbrpy/: __init__.py  database.py  http.py  prelude.py  regex.py  shell.py
