[package]
name = "vbr"
version = "0.1.0"
edition = "2021"
description = "VBR — VBA syntax in, idiomatic Rust out. A teaching transpiler."

[lib]
name = "vbr"
path = "src/lib.rs"

[[bin]]
name = "vbr"
path = "src/main.rs"

[dependencies]
# Parses rustc/cargo `--error-format=json` output, so `vbr run`/`runproject`
# can translate Rust errors back to .vbr source lines.
serde_json = "1"
