[package]
name = "vbr_stdlib"
version = "0.1.0"
edition = "2021"
description = "VBR Standard Library — friendly wrappers for common Rust operations"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
regex = "1.0"

# HTTP is deferred — reqwest pulls in tokio/hyper/TLS and needs network to build.
# When it returns it should go behind a feature, e.g.:
# [features]
# http = ["reqwest"]
