[package]
name = "vbr_stdlib"
version = "0.1.0"
edition = "2021"
description = "VBR Standard Library — friendly wrappers for common Rust operations"
license = "MIT"

# Each dependency-bearing namespace is behind a feature, so a project only
# compiles what it uses. `FileSystem` is always available (std-only). The VBR
# project generator enables exactly the features a program needs.
[features]
default = []
json = ["dep:serde_json"]
datetime = ["dep:chrono"]
regex = ["dep:regex"]
http = ["dep:ureq"]
dataframe = ["dep:polars"]

[dependencies]
serde_json = { version = "1.0", optional = true }
chrono = { version = "0.4", optional = true }
regex = { version = "1.0", optional = true }
ureq = { version = "2", optional = true }
polars = { version = "0.44", optional = true, default-features = false, features = ["lazy", "csv", "fmt"] }
