[package]
name = "vbr-ide"
version = "0.1.0"
edition = "2021"
description = "The VBR IDE — a desktop shell (Tauri) around the vbr compiler: edit VBR, watch the Rust, build and run."
default-run = "vbr-ide"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vbr-ide-core = { path = "../vbr-ide-core" }
# Native Open/Save dialogs, without the plugin capability-scoping dance.
rfd = "0.15"
